--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,8 @@
 
 <style>
   :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+      "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
     color: #333;
     box-sizing: border-box;
@@ -245,8 +244,8 @@
     background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
     margin-left: 4px;
     font-weight: 600;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-      sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif,
+      Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   }
 
   .github-star-badge:hover {
@@ -352,11 +351,7 @@
           transform="translate(141 696)"
           fill="#dd0031"
         />
-        <g
-          id="Group_47"
-          data-name="Group 47"
-          transform="translate(165.185 720.185)"
-        >
+        <g id="Group_47" data-name="Group 47" transform="translate(165.185 720.185)">
           <path
             id="Path_33"
             data-name="Path 33"
@@ -400,12 +395,7 @@
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
-    <a
-      class="card"
-      target="_blank"
-      rel="noopener"
-      href="https://angular.io/tutorial"
-    >
+    <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
@@ -413,9 +403,7 @@
         height="24"
         viewBox="0 0 24 24"
       >
-        <path
-          d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
-        />
+        <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z" />
       </svg>
 
       <span>Learn Angular</span>
@@ -431,12 +419,7 @@
       </svg>
     </a>
 
-    <a
-      class="card"
-      target="_blank"
-      rel="noopener"
-      href="https://angular.io/cli"
-    >
+    <a class="card" target="_blank" rel="noopener" href="https://angular.io/cli">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
@@ -462,12 +445,7 @@
       </svg>
     </a>
 
-    <a
-      class="card"
-      target="_blank"
-      rel="noopener"
-      href="https://blog.angular.io/"
-    >
+    <a class="card" target="_blank" rel="noopener" href="https://blog.angular.io/">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
@@ -501,11 +479,7 @@
   <input type="hidden" #selection />
 
   <div class="card-container">
-    <div
-      class="card card-small"
-      (click)="selection.value = 'component'"
-      tabindex="0"
-    >
+    <div class="card card-small" (click)="selection.value = 'component'" tabindex="0">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
@@ -519,11 +493,7 @@
       <span>New Component</span>
     </div>
 
-    <div
-      class="card card-small"
-      (click)="selection.value = 'material'"
-      tabindex="0"
-    >
+    <div class="card card-small" (click)="selection.value = 'material'" tabindex="0">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
@@ -551,11 +521,7 @@
       <span>Add PWA Support</span>
     </div>
 
-    <div
-      class="card card-small"
-      (click)="selection.value = 'dependency'"
-      tabindex="0"
-    >
+    <div class="card card-small" (click)="selection.value = 'dependency'" tabindex="0">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
@@ -569,11 +535,7 @@
       <span>Add Dependency</span>
     </div>
 
-    <div
-      class="card card-small"
-      (click)="selection.value = 'test'"
-      tabindex="0"
-    >
+    <div class="card card-small" (click)="selection.value = 'test'" tabindex="0">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
@@ -587,11 +549,7 @@
       <span>Run and Watch Tests</span>
     </div>
 
-    <div
-      class="card card-small"
-      (click)="selection.value = 'build'"
-      tabindex="0"
-    >
+    <div class="card card-small" (click)="selection.value = 'build'" tabindex="0">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
@@ -736,7 +694,6 @@
       <svg
         alt="Angular Augury Logo"
         xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink"
         width="21.81"
         height="23.447"
         viewBox="0 0 21.81 23.447"
@@ -767,12 +724,7 @@
             transform="translate(-3851.207 -311.417)"
             fill="#311b92"
           />
-          <g
-            id="Group_24"
-            data-name="Group 24"
-            transform="translate(6.194 6.73)"
-            opacity="0.5"
-          >
+          <g id="Group_24" data-name="Group 24" transform="translate(6.194 6.73)" opacity="0.5">
             <g id="Group_23" data-name="Group 23" transform="translate(0 0)">
               <g id="Group_22" data-name="Group 22" clip-path="url(#clip-path)">
                 <path
@@ -952,10 +904,7 @@
         height="24"
         viewBox="0 0 24 24"
       >
-        <path
-          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
-          fill="#1976d2"
-        />
+        <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" fill="#1976d2" />
         <path d="M0 0h24v24H0z" fill="none" />
       </svg>
     </a>
